--- a/Definitions/index.html
+++ b/Definitions/index.html
@@ -25,14 +25,15 @@
   </ul>
 </head>
 <body>
+
 <div class="container">
 <h1 id="privacy-definitions-cheat-sheet">Privacy definitions cheat sheet</h1>
 <h2 id="definition-centralDP">Central Differential Privacy</h2>
 <p>An algorithm <span class="math inline">\(M : X^n \rightarrow Z\)</span> satisfies <span class="math inline">\((\epsilon,\delta)\)</span>-differential privacy if</p>
-<p><span class="math display">\[ \P{M(x) \in T}{x}{X^n} \leq e^{\epsilon}\P{M(x&#39;) \in T}{x&#39;}{X^n} + \delta\]</span></p>
+<p><span class="math display">\[ \mathbb{P}_{x \sim X^n}\Big[M(x) \in T\Big] \leq e^{\epsilon}\mathbb{P}_{x&#39; \sim X^n}\Big[M(x&#39;) \in T\Big] + \delta\]</span></p>
 <p><span class="math inline">\(\forall x \sim x&#39;\)</span> and <span class="math inline">\(\forall T \subseteq Z\)</span>. Two datasets are <span class="math inline">\(x \sim x&#39;\)</span> if they differ by one row or record. Note: For DP to apply, the above in equality must hold for <strong>all</strong> subsets of the range of the alorithm. Another way of viewing the above inequality is in terms of concentration measures:</p>
 <p>With probablity 1 - <span class="math inline">\(\delta\)</span>.</p>
-<p><span class="math display">\[ \frac{ \P{M(x) \in T}{x}{X^n}}{ \P{M(x&#39;) \in T}{x&#39;}{X^n}} \leq e^{\epsilon}\]</span></p>
+<p><span class="math display">\[ \frac{ \mathbb{P}_{x \sim X^n}\Big[M(x) \in T\Big]}{ \mathbb{P}_{x&#39; \sim X^n}\Big[M(x&#39;) \in T\Big]} \leq e^{\epsilon}\]</span></p>
 <p>Usually <span class="math inline">\(\delta = o(1/n)\)</span> is accepted as workable or efficient. This is saying if datasets are neighbouring, central DP gurantees that the algorithm outputs are concentrated near each other with high probability.</p>
 <h2 id="definition-localModel">Local Models</h2>
 <p>First introduced in [<a href="https://arxiv.org/pdf/0803.0924.pdf" title="What can we learn privately">2</a>]</p>
@@ -44,8 +45,8 @@
 <p>We denote the protocol <span class="math inline">\(\textit{P} = (\textit{R}, \textit{A})\)</span>. We assume that the number of users n is public and available to both <span class="math inline">\(\textit{R}\)</span> and <span class="math inline">\(\textit{A}\)</span>. <span class="math inline">\(Let ⃗x \in X^n\)</span>. The evaluation of the protocol  on input ⃗x is</p>
 <p><span class="math display">\[P(x) = (A \circ R)(x) = A\Big(R(x_1), \dots, R(x_n)\Big)\]</span></p>
 <h2 id="definition-localDP">Local Differential Privacy</h2>
-<p>A local protocol <span class="math inline">\(\localP\)</span> satisfies <span class="math inline">\(\epsDelta\)</span>-differential privacy for n users if its randomizer <span class="math inline">\(R : X \rightarrow Y\)</span> is <span class="math inline">\(\epsDelta\)</span>-differentially private (for datasets of size one). In other words, the output of the randomiser for any two inputs must be concentrated with high probability 1 - <span class="math inline">\(\delta\)</span></p>
-<p><span class="math display">\[ \frac{ \P{R(x) \in T}{x}{X}}{ \P{R(x&#39;) \in T}{x&#39;}{X}} \leq
+<p>A local protocol <span class="math inline">\(\textit{P} = (\textit{R}, \textit{A})\)</span> satisfies <span class="math inline">\((\epsilon, \delta)\)</span>-differential privacy for n users if its randomizer <span class="math inline">\(R : X \rightarrow Y\)</span> is <span class="math inline">\((\epsilon, \delta)\)</span>-differentially private (for datasets of size one). In other words, the output of the randomiser for any two inputs must be concentrated with high probability 1 - <span class="math inline">\(\delta\)</span></p>
+<p><span class="math display">\[ \frac{ \mathbb{P}_{x \sim X}\Big[R(x) \in T\Big]}{ \mathbb{P}_{x&#39; \sim X}\Big[R(x&#39;) \in T\Big]} \leq
 e^{\epsilon}\]</span> for all subsets <span class="math inline">\(T \subseteq Y\)</span></p>
 <h2 id="definition-shuffleModel">Shuffled Model</h2>
 <p>A protocol <span class="math inline">\(P\)</span> in the shuffled model consists of three randomized algorithms. The first and last algorithm is identical to the local model. There is a middle shuffle phase. Formally,</p>
@@ -57,7 +58,7 @@ e^{\epsilon}\]</span> for all subsets <span class="math inline">\(T \subseteq Y\
 <p>The evaluation of the protocol <span class="math inline">\(P=(R,A)\)</span> on input <span class="math inline">\(x\)</span> is</p>
 <p><span class="math display">\[P(x) = (A \circ S \circ R)(x) = A\Big(S\big[R(x_1), \dots, R(x_n)\big]\Big)\]</span></p>
 <h2 id="definition-shuffleDP">Shuffle Privacy</h2>
-<p>A shuffled protocol <span class="math inline">\(P = (R,A)\)</span> satisfies <span class="math inline">\(\epsDelta\)</span>-differential privacy for <span class="math inline">\(n\)</span> users if the algorithm <span class="math inline">\((S \circ R) : X^n \rightarrow Y^∗\)</span> is <span class="math inline">\(\epsDelta\)</span>-differentially private.</p>
+<p>A shuffled protocol <span class="math inline">\(P = (R,A)\)</span> satisfies <span class="math inline">\((\epsilon, \delta)\)</span>-differential privacy for <span class="math inline">\(n\)</span> users if the algorithm <span class="math inline">\((S \circ R) : X^n \rightarrow Y^∗\)</span> is <span class="math inline">\((\epsilon, \delta)\)</span>-differentially private.</p>
 <p>This is saying, for two neighbouring datasets <span class="math inline">\(x \sim x&#39;\)</span>, the probability of seeing the same permutation after shuffling the outputs of all the local randomisers is concentrated with high probability 1 - <span class="math inline">\(\delta\)</span>.</p>
 <p>The hope is the following: Because we have this shuffle phase, perhaps we can add a little less noise to the local randomisers thereby getting a little bit more accuracy.</p>
 <h2 id="important-papers">Important Papers</h2>
