--- a/header.html
+++ b/header.html
@@ -2,6 +2,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<ul class="navbar">
-  <h2><a class="active" href="/index.html">Notes on Differential Privacy</a></h2>
-</ul>  
+
+<ul class="bar">
+  <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
+  <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io/index.html">Notes on Differential Privacy</a></li>
+</ul>
+
+
