Shuffle paper one proof left

--- a/Definitions/index.html
+++ b/Definitions/index.html
@@ -23,15 +23,8 @@
   
   <ul class="bar">
     <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
-    <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io/index.html">Notes on Differential Privacy</a></li>
+    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>
   </ul>
-  
-  
-  <!-- <ul class="navbar"> -->
-  <!--   <li class="navbar-list-item"><h1><a class="active" href="/index.html">Home</a></h1></li> -->
-  <!--   <li><h3><a class="active" href="">Notes on Differential Privacy</a></h3></li> -->
-  
-  <!-- </ul>   -->
 </head>
 <body>
 
@@ -79,7 +72,7 @@ e^{\epsilon}\]</span> for all subsets <span class="math inline">\(T \subseteq Y\
 </ol>
 </div>
 <div id="footer">
-   Copyright something something - what people usually right
+  “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
 </body>
 </html>
