--- a/index.html
+++ b/index.html
@@ -22,38 +22,37 @@
   
   <ul class="bar">
     <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
-    <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io/index.html">Notes on Differential Privacy</a></li>
+    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>
   </ul>
-  
-  
-  <!-- <ul class="navbar"> -->
-  <!--   <li class="navbar-list-item"><h1><a class="active" href="/index.html">Home</a></h1></li> -->
-  <!--   <li><h3><a class="active" href="">Notes on Differential Privacy</a></h3></li> -->
-  
-  <!-- </ul>   -->
 </head>
 <body>
 <div class=container>
 <h1 id="table-of-contents">Table of Contents</h1>
+<p>As a general guide for these notes: Definitions are always in blue, lemmas are written in orange and theorems are written in Green. Excerpts that provide intuition are displayed in purple and open questions and confusions are listed in red.</p>
 <h2 id="general-material-that-is-well-understood">General Material that is well understood</h2>
 <p>This is material that is usually common across a subset of papers. Some of it has been repeated enough number of times to be included in textbooks.</p>
 <ul>
 <li><a href="Definitions/">Differential Privacy Cheat sheet</a></li>
-<li><a href="">Concentration Inequalities: building blocks to understanding proofs</a></li>
-<li><a href="">Exponential Mechanism</a></li>
+<li><a href="ConcentrationInequalities/">Concentration Inequalities: building blocks to understanding proofs</a></li>
+<li><a href="ExponentialMechanism/">Exponential Mechanism</a></li>
 </ul>
 <h2 id="specific-research-papers">Specific Research Papers</h2>
+<h3 id="shuffle-privacy">Shuffle Privacy</h3>
 <ul>
-<li><a href="ShufflePrivacy/index.html">Separating Shuffle and Local Privacy: Alber Cheu</a>
-<div class=container>
-</li>
+<li><a href="ShufflePrivacy/index.html">Separating Shuffle and Local Privacy: Alber Cheu</a></li>
 </ul>
-<h2 id="work-graham-and-ari-has-been-doing">Work Graham And Ari has been doing</h2>
+<h3 id="frquency-lists">Frquency Lists</h3>
+<ul>
+<li><a href="">Password Frequency List</a></li>
+<li><a href="">Private Anonymised histograms</a></li>
+</ul>
+<h2 id="work-with-graham">Work with Graham</h2>
 <ul>
 <li><a href="">Re-deriving and extending Trie heavy hitters</a></li>
 </ul>
+<div class=container>
 <div id="footer">
-   Copyright something something - what people usually right
+  “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
 </body>
 </html>
