--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-   Copyright something something - what people usually right
+  “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
