New papers on the roster

--- a/SuccintHist-Bassily/index.html
+++ b/SuccintHist-Bassily/index.html
@@ -26,7 +26,10 @@
   </ul>
 </head>
 <body>
-<h1 id="exponentialmechanism">ExponentialMechanism/</h1>
+
+<div class="container">
+<p>TODO</p>
+</div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
