Conc inequals started but needs edit

--- a/ConcentrationInequalities/index.html
+++ b/ConcentrationInequalities/index.html
@@ -12,6 +12,7 @@
       div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
   <link rel="stylesheet" href="../blog.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML-full" type="text/javascript"></script>
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -27,6 +28,23 @@
 </head>
 <body>
 <h1 id="concentration-inequalities">Concentration Inequalities</h1>
+<h2 id="some-basic-definitions">Some basic definitions</h2>
+<p>It is useful to take p-th root of the moments, which leads to the notion of the <span class="math inline">\(L^p\)</span> norm of a random variable:</p>
+<h2 id="sub-gaussian-distributions">Sub-gaussian distributions</h2>
+<h3 id="proposition-1.1-tail-bound">Proposition 1.1 (Tail bound)</h3>
+<p>Let X be a Gaussian random variable with mean <span class="math inline">\(\mu\)</span> and variance <span class="math inline">\(\sigma^2\)</span> then for any <span class="math inline">\(t &gt; 0\)</span>, it holds</p>
+<p><span class="math display">\[\begin{align*}
+\end{align*}\]</span></p>
+<h2 id="jensens-inequality">Jensen’s Inequality</h2>
+<h2 id="minkowskis-inequality">Minkowski’s Inequality</h2>
+<h2 id="cauchy-schwarz">Cauchy-Schwarz</h2>
+<h2 id="holders-inequality">Holder’s inequality</h2>
+<h2 id="integral-identity">Integral identity</h2>
+<h2 id="appendix">Appendix</h2>
+<ul>
+<li><a href="https://towardsdatascience.com/moment-generating-function-explained-27821a739035">How are moment Generating functions used</a></li>
+<li><a href=""></a></li>
+</ul>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
