--- a/ShufflePrivacy/index.html
+++ b/ShufflePrivacy/index.html
@@ -314,9 +314,9 @@ There exists a multi-message shuffled protocol that is <span class="math inline"
 Proof
 </button>
 <div id="multishuffleLocalBreaks2" class="collapse">
-<p>Consider the randomiser <span class="math inline">\(R^{gap}\)</span> which takes in input <span class="math inline">\(x \in \{0 , 1 \}\)</span> and outputs 4 binary messages/bits. If the input is 0 all 16 values are possible. If the input is 1, then the output cannot have 2 1’s in the output. Note that if we saw output (0,1,1,0) we would know the input value. Thus <span class="math inline">\(R^{gap}\)</span> cannot be DP. However for <span class="math inline">\(n \geq 2\)</span>, the shuffle output <span class="math inline">\((S \circ R)(x)\)</span> can generate all possible values in <span class="math inline">\(\{0,1 \}^4n\)</span>, thereby giving us perfect shuffle privacy.</p>
+<p>Consider the randomiser <span class="math inline">\(R^{gap}\)</span> which takes in input <span class="math inline">\(x \in \{0 , 1 \}\)</span> and outputs 4 binary messages/bits. If the input is 0 all 16 values are possible. If the input is 1, then the output cannot have 2 1’s in the output. Note that if we saw output (0,1,1,0) we would know the input value. Thus <span class="math inline">\(R^{gap}\)</span> cannot be DP. However for <span class="math inline">\(n \geq 2\)</span>, the shuffle output <span class="math inline">\((S \circ R)(x)\)</span> can generate all possible values in <span class="math inline">\(\{0,1 \}^4n\)</span>, thereby giving us perfect shuffle privacy for some <span class="math inline">\(\epsilon &gt; 0\)</span>.</p>
 <div class="question">
-<p>I do not fully understand why yet – but they did give a reason.</p>
+<p>I do not fully understand why yet – but they did give a reason. On the train I can work it out.</p>
 </div>
 </div>
 <h2 id="important-papers">Important Papers</h2>
