Caching frequency estimation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   
   <ul class="bar">
     <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
-    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>
+    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>  
+    <!-- <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io">Notes on Differential Privacy</a></li> -->
   </ul>
 </head>
 <body>
@@ -43,6 +44,7 @@
 </ul>
 <h3 id="local-privacy">Local Privacy</h3>
 <ul>
+<li><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></li>
 <li><a href="SuccintHist-Bassily/index.html">Succint Histogram Problem – local privacy</a></li>
 </ul>
 <h3 id="shuffle-privacy">Shuffle Privacy</h3>
