--- a/Definitions/index.html
+++ b/Definitions/index.html
@@ -23,7 +23,8 @@
   
   <ul class="bar">
     <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
-    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>
+    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>  
+    <!-- <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io">Notes on Differential Privacy</a></li> -->
   </ul>
 </head>
 <body>
