--- a/FrequencyEstimationSurvey/index.html
+++ b/FrequencyEstimationSurvey/index.html
@@ -27,7 +27,24 @@
   </ul>
 </head>
 <body>
-<h1 id="concentration-inequalities">Concentration Inequalities</h1>
+
+<div class="container">
+<h2 id="the-essence-of-local-privacy">The essence of local privacy</h2>
+<p>At the heart of these protocols, each user is asked a simple question about their data by a data analyst. The user then determines randomly whether to answer the question truthfully, or to pick some false response, according to a specified probability distribution. This randomization gives each user “plausible deniability”, and protects their privacy.</p>
+<p>To fully specify a protocol:</p>
+<ol type="1">
+<li>we need to determine what questions are asked,</li>
+<li>and what probability distribution is used over the set of possible answers.</li>
+</ol>
+<p>We also need to show how the data analyst can combine the answers to build a picture of the overall frequency distribution, and understand the accuracy of the results.</p>
+<h2 id="background-material">Background Material</h2>
+<h3 id="local-privacy">Local privacy</h3>
+<p>Already defined</p>
+<h3 id="hadamard-transformation">Hadamard Transformation</h3>
+<p>A special case of the discrete fourier transform.</p>
+<h3 id="pure-protocols">Pure Protocols</h3>
+<p>Wang et al. Needs a little bit of thinking as to what they really are.</p>
+</div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
