--- a/ShufflePrivacy/index.html
+++ b/ShufflePrivacy/index.html
@@ -12,18 +12,18 @@
       div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
   <link rel="stylesheet" href="../blog.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML-full" type="text/javascript"></script>
+  <script src="../code/es5/tex-chtml.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../code/bootstrap.min.css">
+  <script src="../code/jquery.min.js"></script>
+  <script src="../code/bootstrap.min.js"></script>
   
   
   <ul class="bar">
     <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
-    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>  
+    <li class="barli"><a href="/diffrentialprivacy/index.html">Notes on Differential Privacy</a></li>  
     <!-- <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io">Notes on Differential Privacy</a></li> -->
   </ul>
 </head>
