--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="code/bootstrap.min.css">
+  <script src="code/differentialprivacy/code/jquery.min.js"></script>
+  <script src="code/code/bootstrap.min.js"></script>
   
   
   <ul class="bar">
     <li class="barli"><a class="active" href="https://abiswas3.github.io/">Home</a></li>
-    <li class="barli"><a href="/index.html">Notes on Differential Privacy</a></li>  
+    <li class="barli"><a href="/diffrentialprivacy/index.html">Notes on Differential Privacy</a></li>  
     <!-- <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io">Notes on Differential Privacy</a></li> -->
   </ul>
 </head>
@@ -37,15 +37,17 @@
 <li><a href="ConcentrationInequalities/">Concentration Inequalities: building blocks to understanding proofs</a>: A lot of the alogirithms in this area try to approximate the expected value of random variables. Knowing when sample means are a good representation of expected mean seems to be a building block for this area and machine learning theory.</li>
 <li><a href="ExponentialMechanism/">Exponential Mechanism</a>: A theoretical technique developed for when the utility of outputs being considered are very sensitive to perturbation. Examples include auction prices or voting counts. A little bit of noise could alter the final outcome drastically. I describe the theoretical framework with a few simple non practical examples.</li>
 <li><a href="ShufflePrivacy/index.html">Separating Shuffle and Local Privacy: Albert Cheu</a>: A research paper that attempts to understand how shuffle privacy and local privacy are different in theoretical guarantees for the simple mean estimation problem. I go through the paper and re-derive the proofs and try to build some intution as to why the algorithms work.</li>
+<li><a href="">Composition Theorems</a>: Todo</li>
 <li><a href="LearningMultiConcepts/">Simultaneous Private Learning of Multiple Concepts</a></li>
-<li><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></li>
 <li><a href="SuccintHist-Bassily/index.html">Succint Histogram Problem – local privacy</a></li>
+<li><a href="https://www.usenix.org/system/files/conference/usenixsecurity17/sec17-wang-tianhao.pdf">Pure LDP</a></li>
 </ul>
 <h2 id="specific-problems-and-how-a-series-a-research-papers-connect-them">Specific problems and how a series a research papers connect them</h2>
 <p>Sometimes I care about a general problem or application like centrally private mean estimation will go through material related to the problem and analyse the solutions to get an idea of the contributions with regard to that problem only. In these notes I should be able to explain to a non technical person, why the results are important. Additionally, I write code to simulate the alogorithms and check for gaps in practical deployement.</p>
 <ul>
 <li><a href="">Private binary Mean Estimation</a></li>
 <li><a href="">Private Password Lists</a></li>
+<li><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></li>
 </ul>
 <h2 id="my-own-work">My own work</h2>
 <p>In this seciton I describe original work that I am thinking of. Most of this work is done under the suprvision of <a href="https://warwick.ac.uk/fac/sci/dcs/people/graham_cormode/">Graham Cormode</a></p>
