--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
   <link rel="stylesheet" href="code/bootstrap.min.css">
-  <script src="code/differentialprivacy/code/jquery.min.js"></script>
-  <script src="code/code/bootstrap.min.js"></script>
+  <script src="/code/differentialprivacy/code/jquery.min.js"></script>
+  <script src="/code/code/bootstrap.min.js"></script>
   
   
   <ul class="bar">
