--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="../code/bootstrap.min.css">
-<script src="../code/jquery.min.js"></script>
-<script src="../code/bootstrap.min.js"></script>
+<link rel="stylesheet" href="/code/bootstrap.min.css">
+<script src="/code/jquery.min.js"></script>
+<script src="/code/bootstrap.min.js"></script>
 
 
 <ul class="bar">
