New mean estimation in shuffle land

--- a/ShufflePrivacy/index.html
+++ b/ShufflePrivacy/index.html
@@ -31,9 +31,12 @@
 
 <div class=container>
 <h1 id="separting-local-and-shuffle-privacy">Separting local and Shuffle Privacy</h1>
+<div class="question">
+Is there a major difference between mean estimation for histograms and regular mean estimation of a discrete population? [<a href="https://arxiv.org/pdf/2109.13158.pdf" title="Differentially Private Aggregation in the Shuffle Model: Almost Central Accuracy in Almost a Single Message">5</a>] does the same problem as this paper but not for histograms. Therefore histograms as they are bucketted, must be easier?
+</div>
 <h2 id="main-takeaways">Main Takeaways</h2>
 <p>The authors propose a protocol for computing sums for histograms with error independent of the domain size/number of bins <span class="math inline">\(d\)</span> given a fixed privacy budget. This implies an arbitrarily large gap in sample complexity between the shuffled and local models. The problem was motivated by the following observation:</p>
-<p>`<code>a locally private d-bin histogram has, on some bin, error scaling with √log d. But when users trust the analyzer with their raw data (the central model), there is an algorithm that achieves error independent of d on every bin.</code></p>
+<p><code>a locally private d-bin histogram has, on some bin, error scaling with √log d. But when users trust the analyzer with their raw data (the central model), there is an algorithm that achieves error independent of d on every bin.</code></p>
 <p>The best known sample complexity for the local model can be found in [<a href="https://arxiv.org/pdf/1504.04686.pdf" title="Local, Private, Efficient Protocols for Succinct Histograms">3</a>] and for the central model in [<a href="https://arxiv.org/pdf/1511.08552.pdf" title="Simultaneous Private Learning of Multiple Concepts">4</a>].</p>
 <h2 id="background-material">Background Material</h2>
 <p>This is material that we need to be able to derive the proofs in the paper. Researchers in [<a href="https://arxiv.org/pdf/1908.11358.pdf" title="On the power of multiple anonymous messages">1</a>] identified a class of distributions and argue that, if <span class="math inline">\(\eta\)</span> is sampled from such a distribution, adding <span class="math inline">\(\eta\)</span> to any output of a 1-sensitive function ensures differential privacy of that sum. Histogram sums where records differ by one count are 1-sensitive functions; thus adding a noise drawn from such a distribution will get you diffential privacy.</p>
@@ -74,9 +77,12 @@ Proof
 <ol type="1">
 <li>The authors present a protocol in the shuffled model that estimates histograms with error independent of the domain size. This implies an arbitrarily large gap in sample complexity between the shuffled and local models.
 <div class="question">
-I have not verified myself what the accuracy guarantees of known local models are. Perhaps this is something I should do.
+I have not verified myself what the accuracy guarantees of known local models are. Perhaps this is something I should do. But Grahams survey paper does this
 </div></li>
-<li>Local and shuffle privacy are equivalent when we impose the constraints of pure differential privacy and single-message randomizers.</li>
+<li>Local and shuffle privacy are equivalent when we impose the constraints of pure differential privacy and single-message randomizers. Not anymore:
+<div class="question">
+<a href="/ShuffleSumMeanEstimateRasmus/">Now there (Sep 2021)</a> there is a paper that gives near central guarantees for shuffle DP with near constant message complexity. Howo does this affect this papers findings?
+</div></li>
 </ol>
 <h2 id="the-binary-histogram">The binary histogram</h2>
 <p>Before estimating all histograms, the authors look at the binary histogram or binary sums where the cells of the histogram are constrained to have values in <span class="math inline">\(\{0, 1\}\)</span>.</p>
@@ -337,6 +343,7 @@ Proof
 </div></li>
 </ol>
 <p><a href="https://arxiv.org/pdf/1511.08552.pdf">Simultaneous Private Learning of Multiple Concepts</a></p>
+<p><a href="https://arxiv.org/pdf/2109.13158.pdf">Differentially Private Aggregation in the Shuffle Model: Almost Central Accuracy in Almost a Single Message</a></p>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
 </div>
