--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@
 <li><a href="LearningMultiConcepts/">Simultaneous Private Learning of Multiple Concepts</a></li>
 <li><a href="SuccintHist-Bassily/index.html">Succint Histogram Problem – local privacy</a></li>
 <li><a href="https://www.usenix.org/system/files/conference/usenixsecurity17/sec17-wang-tianhao.pdf">Pure LDP</a></li>
+<li><a href="ShuffleSumMeanEstimateRasmus/">Shuffle: Almost Central Almost no communication</a></li>
 </ul>
 <h2 id="specific-problems-and-how-a-series-a-research-papers-connect-them">Specific problems and how a series a research papers connect them</h2>
 <p>Sometimes I care about a general problem or application like centrally private mean estimation will go through material related to the problem and analyse the solutions to get an idea of the contributions with regard to that problem only. In these notes I should be able to explain to a non technical person, why the results are important. Additionally, I write code to simulate the alogorithms and check for gaps in practical deployement.</p>
 <ul>
-<li><a href="">Private binary Mean Estimation</a></li>
+<li><a href="">Private Mean Estimation</a>: In this work, we study the problem of summing (aggregating) real numbers or integers, a basic primitive in numerous machine learning tasks. People have attempted this under many different assumptions and come with different solutions. These notes summarise the works from:
+<ul>
+<li>Laplace</li>
+<li>Pagh</li>
+<li>Cheu</li>
+<li>Cormode</li>
+</ul></li>
 <li><a href="">Private Password Lists</a></li>
 <li><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></li>
 </ul>
