--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
 </li>
 <li><a href="">Composition Theorems</a>: Todo</li>
 </ul>
-<h3 id="new-research-papers">New Research Papers</h3>
+<h3 id="research-papers">Research Papers</h3>
 <ul>
 <li><a href="ShufflePrivacy/index.html">Separating Shuffle and Local Privacy: Albert Cheu</a>: A research paper that attempts to understand how shuffle privacy and local privacy are different in theoretical guarantees for the simple mean estimation problem. I go through the paper and re-derive the proofs and try to build some intution as to why the algorithms work.</li>
 <li><a href="ShuffleSumBinaryRasmus/">Shuffle: Binary sums with no communication</a><br />
 </li>
-<li><p><a href="ShuffleSumMeanEstimateRasmus/">Shuffle: Almost Central Almost no communication</a></p></li>
+<li><a href="ShuffleSumMeanEstimateRasmus/">Shuffle: Almost Central Almost no communication</a></li>
 <li><a href="LearningMultiConcepts/">Simultaneous Private Learning of Multiple Concepts</a></li>
-<li><a href="SuccintHist-Bassily/index.html">Succint Histogram Problem – local privacy</a></li>
-<li><p><a href="https://www.usenix.org/system/files/conference/usenixsecurity17/sec17-wang-tianhao.pdf">Pure LDP</a></p></li>
+<li><a href="FrequencyEstimationSurvey/index.html">frequency Estimation with local privacy: A survey</a></li>
+<li><a href="PureProtocols/">Pure LDP</a></li>
 </ul>
+<!-- * [Succint Histogram Problem -- local privacy](SuccintHist-Bassily/index.html) -->
 <h2 id="specific-problems-and-how-a-series-a-research-papers-connect-them">Specific problems and how a series a research papers connect them</h2>
-<p>Sometimes I care about a general problem or application like centrally private mean estimation will go through material related to the problem and analyse the solutions to get an idea of the contributions with regard to that problem only. In these notes I should be able to explain to a non technical person, why the results are important. Additionally, I write code to simulate the alogorithms and check for gaps in practical deployement.</p>
+<p>Sometimes I care about a general problem or application like centrally private mean estimation will go through material related to the problem and analyse the solutions to get an idea of the contributionsq with regard to that problem only. In these notes I should be able to explain to a non technical person, why the results are important. Additionally, I write code to simulate the alogorithms and check for gaps in practical deployement.</p>
 <ul>
 <li><a href="PrivateMeanEstimation/">Private Mean Estimation</a>: In this work, we study the problem of summing (aggregating) real numbers or integers, a basic primitive in numerous machine learning tasks. People have attempted this under many different assumptions and come with different solutions. These notes summarise the works from:
 <ul>
@@ -61,7 +62,6 @@
 <li>Cormode</li>
 </ul></li>
 <li><a href="">Private Password Lists</a></li>
-<li><a href="FrequencyEstimationSurvey/index.html">Frequency Estimation with local privacy: A survey</a></li>
 </ul>
 <h2 id="my-own-work">My own work</h2>
 <p>In this seciton I describe original work that I am thinking of. Most of this work is done under the suprvision of <a href="https://warwick.ac.uk/fac/sci/dcs/people/graham_cormode/">Graham Cormode</a></p>
